# fastapi_nds-price-optimizer

./: Dockerfile  calculate.py  compose.yaml  main.py  pyproject.toml  tests.py
